--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ body {
     width: 100%;
     border-radius: 50%;
     max-width: 300px;
+    height: 100%;
+    margin: auto;
     float: left;
 }
 
